--- a/scss/modules/msc-card.scss
+++ b/scss/modules/msc-card.scss
@@ -5,7 +5,7 @@
 @mixin use() {
     .msc-card {
         display: flex;
-        height: max-content;
+        // height: max-content;
         flex-direction: column;
         overflow: hidden;
         width: 100%;
@@ -25,7 +25,8 @@
     
         .msc-card__media {
             width: 100%;
-            height: 140px !important;
+            height: 100%;
+            max-height: 140px !important;
             overflow-y: hidden;
         
             img {
@@ -38,6 +39,13 @@
         }
     
         .msc-card__content {
+            height: 100%;
+            min-height: 174px;
+            max-height: max-content;
+            // max-height: 180px;
+            display: flex;
+            flex-flow: column nowrap;
+            justify-content: space-between;
             padding: 1rem;
             color: inherit;
             overflow: hidden;
@@ -78,7 +86,7 @@
                 display: flex;
                 justify-content: flex-end;
                 position: relative;
-                margin-top: 1rem;
+                margin-top: 1em;
         
                 & > * + * {
                     margin-left: 0.5rem;
@@ -89,6 +97,7 @@
             
                     .msc-button {
                         width: max-content !important;
+                        height: max-content !important;
                         padding: 0.3rem 0.5rem;
                 
                         &.msc-button--outlined,
