--- a/scss/main.scss
+++ b/scss/main.scss
@@ -204,7 +204,7 @@
     }
   }
 
-  #stuff-i-do, #ready-to-collaborate {
+  #stuff-i-do {
     margin-top: 10rem;
     display: flex;
     flex-direction: column;
@@ -217,12 +217,21 @@
     }
   }
 
-  #ready-to-collaborate {
+  #ready-to-collaborate,
+  #need-more-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background: #211f1f;
     box-shadow: 0 7px #363333;
     padding: 3rem;
     border-radius: 1rem;
-    margin-bottom: 10rem;
+    transition: all 0.1s ease;
+
+    &:hover {
+      transform: translateY(-10px);
+    }
   }
   
   .hc-button.hc-button--full-width.hc-button--full-height {
