--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,12 +23,26 @@
   a {
     outline: none !important;
   }
-  
-  ::-moz-selection {
-    color: himig.theme-token-get('accent-ink');
-    background: himig.theme-token-get('accent');
+
+  p {
+    line-height: 1.5;
+  }
+
+  .highlight {
+    display: inline-block;
+    color: himig.theme-token-get('accent');
+    font-weight: bold;
+    text-decoration: underline dotted;
+    text-decoration-thickness: 2px;
+
+    &::-moz-selection,
+    &::selection {
+      color: himig.theme-token-get('accent-inverted-ink') !important;
+      background: himig.theme-token-get('accent-inverted') !important;
+    }
   }
   
+  ::-moz-selection,
   ::selection {
     color: himig.theme-token-get('accent-ink');
     background: himig.theme-token-get('accent');
@@ -129,6 +143,7 @@
       border: 20px solid #fff;
       overflow: hidden;
       transform: rotateZ(2deg);
+      user-select: none;
 
       img {
         width: 100%;
@@ -172,6 +187,7 @@
         border: 1px solid var(--tech-color, #fff);
         color: var(--tech-color, #fff);
         transition: all 0.1s ease;
+        user-select: none;
 
         &#github {
           &:hover {
@@ -223,10 +239,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 2rem;
+    border-radius: 1rem;
     background: #211f1f;
     box-shadow: 0 7px #363333;
-    padding: 3rem;
-    border-radius: 1rem;
     transition: all 0.1s ease;
 
     &:hover {
